--- a/style.css
+++ b/style.css
@@ -93,3 +93,16 @@ body{
 	color: white;
 	padding: 0px 20px;
 }
+#popup
+{
+	width: 0%;
+	height: 0%;
+	background-color: #000;
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	margin: auto;
+	opacity: 0;
+}
